lab4/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> program_body
Rule 2     program_body -> <empty>
Rule 3     program_body -> statements
Rule 4     statements -> stmt
Rule 5     statements -> stmt statements
Rule 6     stmt -> for_stmt
Rule 7     stmt -> while_stmt
Rule 8     stmt -> if_stmt
Rule 9     stmt -> block_stmt
Rule 10    stmt -> simple_stmt ;
Rule 11    stmt -> assign_stmt ;
Rule 12    block_stmt -> { statements }
Rule 13    if_stmt -> IF ( cond ) stmt ELSE stmt  [precedence=nonassoc, level=2]
Rule 14    if_stmt -> IF ( cond ) stmt  [precedence=nonassoc, level=1]
Rule 15    while_stmt -> WHILE ( cond ) stmt
Rule 16    for_stmt -> FOR id_ref = range stmt
Rule 17    range -> expr : expr
Rule 18    simple_stmt -> PRINT print_args
Rule 19    simple_stmt -> RETURN expr
Rule 20    simple_stmt -> CONTINUE
Rule 21    simple_stmt -> BREAK
Rule 22    print_args -> print_arg
Rule 23    print_args -> print_args , print_arg
Rule 24    print_arg -> expr
Rule 25    print_arg -> STRING
Rule 26    assign_stmt -> ref_vector assign_op expr
Rule 27    assign_stmt -> ref_matrix assign_op expr
Rule 28    assign_stmt -> id_ref assign_op expr
Rule 29    assign_op -> =
Rule 30    assign_op -> ADDASSIGN  [precedence=right, level=3]
Rule 31    assign_op -> SUBASSIGN  [precedence=right, level=3]
Rule 32    assign_op -> DIVASSIGN  [precedence=right, level=3]
Rule 33    assign_op -> MULASSIGN  [precedence=right, level=3]
Rule 34    expr -> ref_vector
Rule 35    expr -> ref_matrix
Rule 36    expr -> transpose
Rule 37    expr -> unary_neg
Rule 38    expr -> mat_func_call
Rule 39    expr -> matrix_init
Rule 40    expr -> term
Rule 41    expr -> expr DOTDIV expr  [precedence=left, level=8]
Rule 42    expr -> expr DOTMUL expr  [precedence=left, level=8]
Rule 43    expr -> expr DOTSUB expr  [precedence=left, level=6]
Rule 44    expr -> expr DOTADD expr  [precedence=left, level=6]
Rule 45    expr -> expr / expr  [precedence=left, level=7]
Rule 46    expr -> expr * expr  [precedence=left, level=7]
Rule 47    expr -> expr - expr  [precedence=left, level=5]
Rule 48    expr -> expr + expr  [precedence=left, level=5]
Rule 49    unary_neg -> - expr  [precedence=right, level=9]
Rule 50    transpose -> expr '  [precedence=left, level=10]
Rule 51    term -> id_ref
Rule 52    term -> number
Rule 53    cond -> expr > expr  [precedence=nonassoc, level=4]
Rule 54    cond -> expr < expr  [precedence=nonassoc, level=4]
Rule 55    cond -> expr GE expr  [precedence=nonassoc, level=4]
Rule 56    cond -> expr LE expr  [precedence=nonassoc, level=4]
Rule 57    cond -> expr NE expr  [precedence=nonassoc, level=4]
Rule 58    cond -> expr EQ expr  [precedence=nonassoc, level=4]
Rule 59    mat_func_call -> mat_func ( INTNUM )
Rule 60    mat_func -> ZEROS
Rule 61    mat_func -> ONES
Rule 62    mat_func -> EYE
Rule 63    matrix_init -> [ mat_rows ]
Rule 64    mat_rows -> mat_row
Rule 65    mat_rows -> mat_rows , mat_row
Rule 66    mat_row -> [ row_items ]
Rule 67    row_items -> row_item
Rule 68    row_items -> row_items , row_item
Rule 69    row_item -> matrix_ref
Rule 70    row_item -> id_ref
Rule 71    row_item -> number
Rule 72    matrix_ref -> ref_matrix
Rule 73    matrix_ref -> ref_vector
Rule 74    ref_vector -> ID [ INTNUM ]
Rule 75    ref_matrix -> ID [ INTNUM , INTNUM ]
Rule 76    id_ref -> ID
Rule 77    number -> FLOATNUM
Rule 78    number -> INTNUM

Terminals, with rules where they appear:

'                    : 50
(                    : 13 14 15 59
)                    : 13 14 15 59
*                    : 46
+                    : 48
,                    : 23 65 68 75
-                    : 47 49
/                    : 45
:                    : 17
;                    : 10 11
<                    : 54
=                    : 16 29
>                    : 53
ADDASSIGN            : 30
BREAK                : 21
CONTINUE             : 20
DIVASSIGN            : 32
DOTADD               : 44
DOTDIV               : 41
DOTMUL               : 42
DOTSUB               : 43
ELSE                 : 13
EQ                   : 58
EYE                  : 62
FLOATNUM             : 77
FOR                  : 16
GE                   : 55
ID                   : 74 75 76
IF                   : 13 14
INTNUM               : 59 74 75 75 78
LE                   : 56
MULASSIGN            : 33
NE                   : 57
ONES                 : 61
PRINT                : 18
RETURN               : 19
STRING               : 25
SUBASSIGN            : 31
WHILE                : 15
ZEROS                : 60
[                    : 63 66 74 75
]                    : 63 66 74 75
error                : 
{                    : 12
}                    : 12

Nonterminals, with rules where they appear:

assign_op            : 26 27 28
assign_stmt          : 11
block_stmt           : 9
cond                 : 13 14 15
expr                 : 17 17 19 24 26 27 28 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 50 53 53 54 54 55 55 56 56 57 57 58 58
for_stmt             : 6
id_ref               : 16 28 51 70
if_stmt              : 8
mat_func             : 59
mat_func_call        : 38
mat_row              : 64 65
mat_rows             : 63 65
matrix_init          : 39
matrix_ref           : 69
number               : 52 71
print_arg            : 22 23
print_args           : 18 23
program              : 0
program_body         : 1
range                : 16
ref_matrix           : 27 35 72
ref_vector           : 26 34 73
row_item             : 67 68
row_items            : 66 68
simple_stmt          : 10
statements           : 3 5 12
stmt                 : 4 5 13 13 14 15 16
term                 : 40
transpose            : 36
unary_neg            : 37
while_stmt           : 7


state 0

    (0) S' -> . program
    (1) program -> . program_body
    (2) program_body -> .
    (3) program_body -> . statements
    (4) statements -> . stmt
    (5) statements -> . stmt statements
    (6) stmt -> . for_stmt
    (7) stmt -> . while_stmt
    (8) stmt -> . if_stmt
    (9) stmt -> . block_stmt
    (10) stmt -> . simple_stmt ;
    (11) stmt -> . assign_stmt ;
    (16) for_stmt -> . FOR id_ref = range stmt
    (15) while_stmt -> . WHILE ( cond ) stmt
    (13) if_stmt -> . IF ( cond ) stmt ELSE stmt
    (14) if_stmt -> . IF ( cond ) stmt
    (12) block_stmt -> . { statements }
    (18) simple_stmt -> . PRINT print_args
    (19) simple_stmt -> . RETURN expr
    (20) simple_stmt -> . CONTINUE
    (21) simple_stmt -> . BREAK
    (26) assign_stmt -> . ref_vector assign_op expr
    (27) assign_stmt -> . ref_matrix assign_op expr
    (28) assign_stmt -> . id_ref assign_op expr
    (74) ref_vector -> . ID [ INTNUM ]
    (75) ref_matrix -> . ID [ INTNUM , INTNUM ]
    (76) id_ref -> . ID
    $end            reduce using rule 2 (program_body -> .)
    FOR             shift and go to state 11
    WHILE           shift and go to state 13
    IF              shift and go to state 14
    {               shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 17
    CONTINUE        shift and go to state 18
    BREAK           shift and go to state 19
    ID              shift and go to state 22

    program                        shift and go to state 1
    program_body                   shift and go to state 2
    statements                     shift and go to state 3
    stmt                           shift and go to state 4
    for_stmt                       shift and go to state 5
    while_stmt                     shift and go to state 6
    if_stmt                        shift and go to state 7
    block_stmt                     shift and go to state 8
    simple_stmt                    shift and go to state 9
    assign_stmt                    shift and go to state 10
    id_ref                         shift and go to state 12
    ref_vector                     shift and go to state 20
    ref_matrix                     shift and go to state 21

state 1

    (0) S' -> program .


state 2

    (1) program -> program_body .
    $end            reduce using rule 1 (program -> program_body .)


state 3

    (3) program_body -> statements .
    $end            reduce using rule 3 (program_body -> statements .)


state 4

    (4) statements -> stmt .
    (5) statements -> stmt . statements
    (4) statements -> . stmt
    (5) statements -> . stmt statements
    (6) stmt -> . for_stmt
    (7) stmt -> . while_stmt
    (8) stmt -> . if_stmt
    (9) stmt -> . block_stmt
    (10) stmt -> . simple_stmt ;
    (11) stmt -> . assign_stmt ;
    (16) for_stmt -> . FOR id_ref = range stmt
    (15) while_stmt -> . WHILE ( cond ) stmt
    (13) if_stmt -> . IF ( cond ) stmt ELSE stmt
    (14) if_stmt -> . IF ( cond ) stmt
    (12) block_stmt -> . { statements }
    (18) simple_stmt -> . PRINT print_args
    (19) simple_stmt -> . RETURN expr
    (20) simple_stmt -> . CONTINUE
    (21) simple_stmt -> . BREAK
    (26) assign_stmt -> . ref_vector assign_op expr
    (27) assign_stmt -> . ref_matrix assign_op expr
    (28) assign_stmt -> . id_ref assign_op expr
    (74) ref_vector -> . ID [ INTNUM ]
    (75) ref_matrix -> . ID [ INTNUM , INTNUM ]
    (76) id_ref -> . ID
    $end            reduce using rule 4 (statements -> stmt .)
    }               reduce using rule 4 (statements -> stmt .)
    FOR             shift and go to state 11
    WHILE           shift and go to state 13
    IF              shift and go to state 14
    {               shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 17
    CONTINUE        shift and go to state 18
    BREAK           shift and go to state 19
    ID              shift and go to state 22

    stmt                           shift and go to state 4
    statements                     shift and go to state 23
    for_stmt                       shift and go to state 5
    while_stmt                     shift and go to state 6
    if_stmt                        shift and go to state 7
    block_stmt                     shift and go to state 8
    simple_stmt                    shift and go to state 9
    assign_stmt                    shift and go to state 10
    id_ref                         shift and go to state 12
    ref_vector                     shift and go to state 20
    ref_matrix                     shift and go to state 21

state 5

    (6) stmt -> for_stmt .
    FOR             reduce using rule 6 (stmt -> for_stmt .)
    WHILE           reduce using rule 6 (stmt -> for_stmt .)
    IF              reduce using rule 6 (stmt -> for_stmt .)
    {               reduce using rule 6 (stmt -> for_stmt .)
    PRINT           reduce using rule 6 (stmt -> for_stmt .)
    RETURN          reduce using rule 6 (stmt -> for_stmt .)
    CONTINUE        reduce using rule 6 (stmt -> for_stmt .)
    BREAK           reduce using rule 6 (stmt -> for_stmt .)
    ID              reduce using rule 6 (stmt -> for_stmt .)
    $end            reduce using rule 6 (stmt -> for_stmt .)
    }               reduce using rule 6 (stmt -> for_stmt .)
    ELSE            reduce using rule 6 (stmt -> for_stmt .)


state 6

    (7) stmt -> while_stmt .
    FOR             reduce using rule 7 (stmt -> while_stmt .)
    WHILE           reduce using rule 7 (stmt -> while_stmt .)
    IF              reduce using rule 7 (stmt -> while_stmt .)
    {               reduce using rule 7 (stmt -> while_stmt .)
    PRINT           reduce using rule 7 (stmt -> while_stmt .)
    RETURN          reduce using rule 7 (stmt -> while_stmt .)
    CONTINUE        reduce using rule 7 (stmt -> while_stmt .)
    BREAK           reduce using rule 7 (stmt -> while_stmt .)
    ID              reduce using rule 7 (stmt -> while_stmt .)
    $end            reduce using rule 7 (stmt -> while_stmt .)
    }               reduce using rule 7 (stmt -> while_stmt .)
    ELSE            reduce using rule 7 (stmt -> while_stmt .)


state 7

    (8) stmt -> if_stmt .
    FOR             reduce using rule 8 (stmt -> if_stmt .)
    WHILE           reduce using rule 8 (stmt -> if_stmt .)
    IF              reduce using rule 8 (stmt -> if_stmt .)
    {               reduce using rule 8 (stmt -> if_stmt .)
    PRINT           reduce using rule 8 (stmt -> if_stmt .)
    RETURN          reduce using rule 8 (stmt -> if_stmt .)
    CONTINUE        reduce using rule 8 (stmt -> if_stmt .)
    BREAK           reduce using rule 8 (stmt -> if_stmt .)
    ID              reduce using rule 8 (stmt -> if_stmt .)
    $end            reduce using rule 8 (stmt -> if_stmt .)
    }               reduce using rule 8 (stmt -> if_stmt .)
    ELSE            reduce using rule 8 (stmt -> if_stmt .)


state 8

    (9) stmt -> block_stmt .
    FOR             reduce using rule 9 (stmt -> block_stmt .)
    WHILE           reduce using rule 9 (stmt -> block_stmt .)
    IF              reduce using rule 9 (stmt -> block_stmt .)
    {               reduce using rule 9 (stmt -> block_stmt .)
    PRINT           reduce using rule 9 (stmt -> block_stmt .)
    RETURN          reduce using rule 9 (stmt -> block_stmt .)
    CONTINUE        reduce using rule 9 (stmt -> block_stmt .)
    BREAK           reduce using rule 9 (stmt -> block_stmt .)
    ID              reduce using rule 9 (stmt -> block_stmt .)
    $end            reduce using rule 9 (stmt -> block_stmt .)
    }               reduce using rule 9 (stmt -> block_stmt .)
    ELSE            reduce using rule 9 (stmt -> block_stmt .)


state 9

    (10) stmt -> simple_stmt . ;
    ;               shift and go to state 24


state 10

    (11) stmt -> assign_stmt . ;
    ;               shift and go to state 25


state 11

    (16) for_stmt -> FOR . id_ref = range stmt
    (76) id_ref -> . ID
    ID              shift and go to state 27

    id_ref                         shift and go to state 26

state 12

    (28) assign_stmt -> id_ref . assign_op expr
    (29) assign_op -> . =
    (30) assign_op -> . ADDASSIGN
    (31) assign_op -> . SUBASSIGN
    (32) assign_op -> . DIVASSIGN
    (33) assign_op -> . MULASSIGN
    =               shift and go to state 29
    ADDASSIGN       shift and go to state 30
    SUBASSIGN       shift and go to state 31
    DIVASSIGN       shift and go to state 32
    MULASSIGN       shift and go to state 33

    assign_op                      shift and go to state 28

state 13

    (15) while_stmt -> WHILE . ( cond ) stmt
    (               shift and go to state 34


state 14

    (13) if_stmt -> IF . ( cond ) stmt ELSE stmt
    (14) if_stmt -> IF . ( cond ) stmt
    (               shift and go to state 35


state 15

    (12) block_stmt -> { . statements }
    (4) statements -> . stmt
    (5) statements -> . stmt statements
    (6) stmt -> . for_stmt
    (7) stmt -> . while_stmt
    (8) stmt -> . if_stmt
    (9) stmt -> . block_stmt
    (10) stmt -> . simple_stmt ;
    (11) stmt -> . assign_stmt ;
    (16) for_stmt -> . FOR id_ref = range stmt
    (15) while_stmt -> . WHILE ( cond ) stmt
    (13) if_stmt -> . IF ( cond ) stmt ELSE stmt
    (14) if_stmt -> . IF ( cond ) stmt
    (12) block_stmt -> . { statements }
    (18) simple_stmt -> . PRINT print_args
    (19) simple_stmt -> . RETURN expr
    (20) simple_stmt -> . CONTINUE
    (21) simple_stmt -> . BREAK
    (26) assign_stmt -> . ref_vector assign_op expr
    (27) assign_stmt -> . ref_matrix assign_op expr
    (28) assign_stmt -> . id_ref assign_op expr
    (74) ref_vector -> . ID [ INTNUM ]
    (75) ref_matrix -> . ID [ INTNUM , INTNUM ]
    (76) id_ref -> . ID
    FOR             shift and go to state 11
    WHILE           shift and go to state 13
    IF              shift and go to state 14
    {               shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 17
    CONTINUE        shift and go to state 18
    BREAK           shift and go to state 19
    ID              shift and go to state 22

    statements                     shift and go to state 36
    stmt                           shift and go to state 4
    for_stmt                       shift and go to state 5
    while_stmt                     shift and go to state 6
    if_stmt                        shift and go to state 7
    block_stmt                     shift and go to state 8
    simple_stmt                    shift and go to state 9
    assign_stmt                    shift and go to state 10
    id_ref                         shift and go to state 12
    ref_vector                     shift and go to state 20
    ref_matrix                     shift and go to state 21

state 16

    (18) simple_stmt -> PRINT . print_args
    (22) print_args -> . print_arg
    (23) print_args -> . print_args , print_arg
    (24) print_arg -> . expr
    (25) print_arg -> . STRING
    (34) expr -> . ref_vector
    (35) expr -> . ref_matrix
    (36) expr -> . transpose
    (37) expr -> . unary_neg
    (38) expr -> . mat_func_call
    (39) expr -> . matrix_init
    (40) expr -> . term
    (41) expr -> . expr DOTDIV expr
    (42) expr -> . expr DOTMUL expr
    (43) expr -> . expr DOTSUB expr
    (44) expr -> . expr DOTADD expr
    (45) expr -> . expr / expr
    (46) expr -> . expr * expr
    (47) expr -> . expr - expr
    (48) expr -> . expr + expr
    (74) ref_vector -> . ID [ INTNUM ]
    (75) ref_matrix -> . ID [ INTNUM , INTNUM ]
    (50) transpose -> . expr '
    (49) unary_neg -> . - expr
    (59) mat_func_call -> . mat_func ( INTNUM )
    (63) matrix_init -> . [ mat_rows ]
    (51) term -> . id_ref
    (52) term -> . number
    (60) mat_func -> . ZEROS
    (61) mat_func -> . ONES
    (62) mat_func -> . EYE
    (76) id_ref -> . ID
    (77) number -> . FLOATNUM
    (78) number -> . INTNUM
    STRING          shift and go to state 40
    ID              shift and go to state 22
    -               shift and go to state 48
    [               shift and go to state 49
    ZEROS           shift and go to state 54
    ONES            shift and go to state 55
    EYE             shift and go to state 56
    FLOATNUM        shift and go to state 57
    INTNUM          shift and go to state 50

    print_args                     shift and go to state 37
    print_arg                      shift and go to state 38
    expr                           shift and go to state 39
    ref_vector                     shift and go to state 41
    ref_matrix                     shift and go to state 42
    transpose                      shift and go to state 43
    unary_neg                      shift and go to state 44
    mat_func_call                  shift and go to state 45
    matrix_init                    shift and go to state 46
    term                           shift and go to state 47
    mat_func                       shift and go to state 51
    id_ref                         shift and go to state 52
    number                         shift and go to state 53

state 17

    (19) simple_stmt -> RETURN . expr
    (34) expr -> . ref_vector
    (35) expr -> . ref_matrix
    (36) expr -> . transpose
    (37) expr -> . unary_neg
    (38) expr -> . mat_func_call
    (39) expr -> . matrix_init
    (40) expr -> . term
    (41) expr -> . expr DOTDIV expr
    (42) expr -> . expr DOTMUL expr
    (43) expr -> . expr DOTSUB expr
    (44) expr -> . expr DOTADD expr
    (45) expr -> . expr / expr
    (46) expr -> . expr * expr
    (47) expr -> . expr - expr
    (48) expr -> . expr + expr
    (74) ref_vector -> . ID [ INTNUM ]
    (75) ref_matrix -> . ID [ INTNUM , INTNUM ]
    (50) transpose -> . expr '
    (49) unary_neg -> . - expr
    (59) mat_func_call -> . mat_func ( INTNUM )
    (63) matrix_init -> . [ mat_rows ]
    (51) term -> . id_ref
    (52) term -> . number
    (60) mat_func -> . ZEROS
    (61) mat_func -> . ONES
    (62) mat_func -> . EYE
    (76) id_ref -> . ID
    (77) number -> . FLOATNUM
    (78) number -> . INTNUM
    ID              shift and go to state 22
    -               shift and go to state 48
    [               shift and go to state 49
    ZEROS           shift and go to state 54
    ONES            shift and go to state 55
    EYE             shift and go to state 56
    FLOATNUM        shift and go to state 57
    INTNUM          shift and go to state 50

    expr                           shift and go to state 58
    ref_vector                     shift and go to state 41
    ref_matrix                     shift and go to state 42
    transpose                      shift and go to state 43
    unary_neg                      shift and go to state 44
    mat_func_call                  shift and go to state 45
    matrix_init                    shift and go to state 46
    term                           shift and go to state 47
    mat_func                       shift and go to state 51
    id_ref                         shift and go to state 52
    number                         shift and go to state 53

state 18

    (20) simple_stmt -> CONTINUE .
    ;               reduce using rule 20 (simple_stmt -> CONTINUE .)


state 19

    (21) simple_stmt -> BREAK .
    ;               reduce using rule 21 (simple_stmt -> BREAK .)


state 20

    (26) assign_stmt -> ref_vector . assign_op expr
    (29) assign_op -> . =
    (30) assign_op -> . ADDASSIGN
    (31) assign_op -> . SUBASSIGN
    (32) assign_op -> . DIVASSIGN
    (33) assign_op -> . MULASSIGN
    =               shift and go to state 29
    ADDASSIGN       shift and go to state 30
    SUBASSIGN       shift and go to state 31
    DIVASSIGN       shift and go to state 32
    MULASSIGN       shift and go to state 33

    assign_op                      shift and go to state 59

state 21

    (27) assign_stmt -> ref_matrix . assign_op expr
    (29) assign_op -> . =
    (30) assign_op -> . ADDASSIGN
    (31) assign_op -> . SUBASSIGN
    (32) assign_op -> . DIVASSIGN
    (33) assign_op -> . MULASSIGN
    =               shift and go to state 29
    ADDASSIGN       shift and go to state 30
    SUBASSIGN       shift and go to state 31
    DIVASSIGN       shift and go to state 32
    MULASSIGN       shift and go to state 33

    assign_op                      shift and go to state 60

state 22

    (74) ref_vector -> ID . [ INTNUM ]
    (75) ref_matrix -> ID . [ INTNUM , INTNUM ]
    (76) id_ref -> ID .
    [               shift and go to state 61
    =               reduce using rule 76 (id_ref -> ID .)
    ADDASSIGN       reduce using rule 76 (id_ref -> ID .)
    SUBASSIGN       reduce using rule 76 (id_ref -> ID .)
    DIVASSIGN       reduce using rule 76 (id_ref -> ID .)
    MULASSIGN       reduce using rule 76 (id_ref -> ID .)
    DOTDIV          reduce using rule 76 (id_ref -> ID .)
    DOTMUL          reduce using rule 76 (id_ref -> ID .)
    DOTSUB          reduce using rule 76 (id_ref -> ID .)
    DOTADD          reduce using rule 76 (id_ref -> ID .)
    /               reduce using rule 76 (id_ref -> ID .)
    *               reduce using rule 76 (id_ref -> ID .)
    -               reduce using rule 76 (id_ref -> ID .)
    +               reduce using rule 76 (id_ref -> ID .)
    '               reduce using rule 76 (id_ref -> ID .)
    ,               reduce using rule 76 (id_ref -> ID .)
    ;               reduce using rule 76 (id_ref -> ID .)
    >               reduce using rule 76 (id_ref -> ID .)
    <               reduce using rule 76 (id_ref -> ID .)
    GE              reduce using rule 76 (id_ref -> ID .)
    LE              reduce using rule 76 (id_ref -> ID .)
    NE              reduce using rule 76 (id_ref -> ID .)
    EQ              reduce using rule 76 (id_ref -> ID .)
    :               reduce using rule 76 (id_ref -> ID .)
    )               reduce using rule 76 (id_ref -> ID .)
    FOR             reduce using rule 76 (id_ref -> ID .)
    WHILE           reduce using rule 76 (id_ref -> ID .)
    IF              reduce using rule 76 (id_ref -> ID .)
    {               reduce using rule 76 (id_ref -> ID .)
    PRINT           reduce using rule 76 (id_ref -> ID .)
    RETURN          reduce using rule 76 (id_ref -> ID .)
    CONTINUE        reduce using rule 76 (id_ref -> ID .)
    BREAK           reduce using rule 76 (id_ref -> ID .)
    ID              reduce using rule 76 (id_ref -> ID .)


state 23

    (5) statements -> stmt statements .
    $end            reduce using rule 5 (statements -> stmt statements .)
    }               reduce using rule 5 (statements -> stmt statements .)


state 24

    (10) stmt -> simple_stmt ; .
    FOR             reduce using rule 10 (stmt -> simple_stmt ; .)
    WHILE           reduce using rule 10 (stmt -> simple_stmt ; .)
    IF              reduce using rule 10 (stmt -> simple_stmt ; .)
    {               reduce using rule 10 (stmt -> simple_stmt ; .)
    PRINT           reduce using rule 10 (stmt -> simple_stmt ; .)
    RETURN          reduce using rule 10 (stmt -> simple_stmt ; .)
    CONTINUE        reduce using rule 10 (stmt -> simple_stmt ; .)
    BREAK           reduce using rule 10 (stmt -> simple_stmt ; .)
    ID              reduce using rule 10 (stmt -> simple_stmt ; .)
    $end            reduce using rule 10 (stmt -> simple_stmt ; .)
    }               reduce using rule 10 (stmt -> simple_stmt ; .)
    ELSE            reduce using rule 10 (stmt -> simple_stmt ; .)


state 25

    (11) stmt -> assign_stmt ; .
    FOR             reduce using rule 11 (stmt -> assign_stmt ; .)
    WHILE           reduce using rule 11 (stmt -> assign_stmt ; .)
    IF              reduce using rule 11 (stmt -> assign_stmt ; .)
    {               reduce using rule 11 (stmt -> assign_stmt ; .)
    PRINT           reduce using rule 11 (stmt -> assign_stmt ; .)
    RETURN          reduce using rule 11 (stmt -> assign_stmt ; .)
    CONTINUE        reduce using rule 11 (stmt -> assign_stmt ; .)
    BREAK           reduce using rule 11 (stmt -> assign_stmt ; .)
    ID              reduce using rule 11 (stmt -> assign_stmt ; .)
    $end            reduce using rule 11 (stmt -> assign_stmt ; .)
    }               reduce using rule 11 (stmt -> assign_stmt ; .)
    ELSE            reduce using rule 11 (stmt -> assign_stmt ; .)


state 26

    (16) for_stmt -> FOR id_ref . = range stmt
    =               shift and go to state 62


state 27

    (76) id_ref -> ID .
    =               reduce using rule 76 (id_ref -> ID .)


state 28

    (28) assign_stmt -> id_ref assign_op . expr
    (34) expr -> . ref_vector
    (35) expr -> . ref_matrix
    (36) expr -> . transpose
    (37) expr -> . unary_neg
    (38) expr -> . mat_func_call
    (39) expr -> . matrix_init
    (40) expr -> . term
    (41) expr -> . expr DOTDIV expr
    (42) expr -> . expr DOTMUL expr
    (43) expr -> . expr DOTSUB expr
    (44) expr -> . expr DOTADD expr
    (45) expr -> . expr / expr
    (46) expr -> . expr * expr
    (47) expr -> . expr - expr
    (48) expr -> . expr + expr
    (74) ref_vector -> . ID [ INTNUM ]
    (75) ref_matrix -> . ID [ INTNUM , INTNUM ]
    (50) transpose -> . expr '
    (49) unary_neg -> . - expr
    (59) mat_func_call -> . mat_func ( INTNUM )
    (63) matrix_init -> . [ mat_rows ]
    (51) term -> . id_ref
    (52) term -> . number
    (60) mat_func -> . ZEROS
    (61) mat_func -> . ONES
    (62) mat_func -> . EYE
    (76) id_ref -> . ID
    (77) number -> . FLOATNUM
    (78) number -> . INTNUM
    ID              shift and go to state 22
    -               shift and go to state 48
    [               shift and go to state 49
    ZEROS           shift and go to state 54
    ONES            shift and go to state 55
    EYE             shift and go to state 56
    FLOATNUM        shift and go to state 57
    INTNUM          shift and go to state 50

    id_ref                         shift and go to state 52
    expr                           shift and go to state 63
    ref_vector                     shift and go to state 41
    ref_matrix                     shift and go to state 42
    transpose                      shift and go to state 43
    unary_neg                      shift and go to state 44
    mat_func_call                  shift and go to state 45
    matrix_init                    shift and go to state 46
    term                           shift and go to state 47
    mat_func                       shift and go to state 51
    number                         shift and go to state 53

state 29

    (29) assign_op -> = .
    ID              reduce using rule 29 (assign_op -> = .)
    -               reduce using rule 29 (assign_op -> = .)
    [               reduce using rule 29 (assign_op -> = .)
    ZEROS           reduce using rule 29 (assign_op -> = .)
    ONES            reduce using rule 29 (assign_op -> = .)
    EYE             reduce using rule 29 (assign_op -> = .)
    FLOATNUM        reduce using rule 29 (assign_op -> = .)
    INTNUM          reduce using rule 29 (assign_op -> = .)


state 30

    (30) assign_op -> ADDASSIGN .
    ID              reduce using rule 30 (assign_op -> ADDASSIGN .)
    -               reduce using rule 30 (assign_op -> ADDASSIGN .)
    [               reduce using rule 30 (assign_op -> ADDASSIGN .)
    ZEROS           reduce using rule 30 (assign_op -> ADDASSIGN .)
    ONES            reduce using rule 30 (assign_op -> ADDASSIGN .)
    EYE             reduce using rule 30 (assign_op -> ADDASSIGN .)
    FLOATNUM        reduce using rule 30 (assign_op -> ADDASSIGN .)
    INTNUM          reduce using rule 30 (assign_op -> ADDASSIGN .)


state 31

    (31) assign_op -> SUBASSIGN .
    ID              reduce using rule 31 (assign_op -> SUBASSIGN .)
    -               reduce using rule 31 (assign_op -> SUBASSIGN .)
    [               reduce using rule 31 (assign_op -> SUBASSIGN .)
    ZEROS           reduce using rule 31 (assign_op -> SUBASSIGN .)
    ONES            reduce using rule 31 (assign_op -> SUBASSIGN .)
    EYE             reduce using rule 31 (assign_op -> SUBASSIGN .)
    FLOATNUM        reduce using rule 31 (assign_op -> SUBASSIGN .)
    INTNUM          reduce using rule 31 (assign_op -> SUBASSIGN .)


state 32

    (32) assign_op -> DIVASSIGN .
    ID              reduce using rule 32 (assign_op -> DIVASSIGN .)
    -               reduce using rule 32 (assign_op -> DIVASSIGN .)
    [               reduce using rule 32 (assign_op -> DIVASSIGN .)
    ZEROS           reduce using rule 32 (assign_op -> DIVASSIGN .)
    ONES            reduce using rule 32 (assign_op -> DIVASSIGN .)
    EYE             reduce using rule 32 (assign_op -> DIVASSIGN .)
    FLOATNUM        reduce using rule 32 (assign_op -> DIVASSIGN .)
    INTNUM          reduce using rule 32 (assign_op -> DIVASSIGN .)


state 33

    (33) assign_op -> MULASSIGN .
    ID              reduce using rule 33 (assign_op -> MULASSIGN .)
    -               reduce using rule 33 (assign_op -> MULASSIGN .)
    [               reduce using rule 33 (assign_op -> MULASSIGN .)
    ZEROS           reduce using rule 33 (assign_op -> MULASSIGN .)
    ONES            reduce using rule 33 (assign_op -> MULASSIGN .)
    EYE             reduce using rule 33 (assign_op -> MULASSIGN .)
    FLOATNUM        reduce using rule 33 (assign_op -> MULASSIGN .)
    INTNUM          reduce using rule 33 (assign_op -> MULASSIGN .)


state 34

    (15) while_stmt -> WHILE ( . cond ) stmt
    (53) cond -> . expr > expr
    (54) cond -> . expr < expr
    (55) cond -> . expr GE expr
    (56) cond -> . expr LE expr
    (57) cond -> . expr NE expr
    (58) cond -> . expr EQ expr
    (34) expr -> . ref_vector
    (35) expr -> . ref_matrix
    (36) expr -> . transpose
    (37) expr -> . unary_neg
    (38) expr -> . mat_func_call
    (39) expr -> . matrix_init
    (40) expr -> . term
    (41) expr -> . expr DOTDIV expr
    (42) expr -> . expr DOTMUL expr
    (43) expr -> . expr DOTSUB expr
    (44) expr -> . expr DOTADD expr
    (45) expr -> . expr / expr
    (46) expr -> . expr * expr
    (47) expr -> . expr - expr
    (48) expr -> . expr + expr
    (74) ref_vector -> . ID [ INTNUM ]
    (75) ref_matrix -> . ID [ INTNUM , INTNUM ]
    (50) transpose -> . expr '
    (49) unary_neg -> . - expr
    (59) mat_func_call -> . mat_func ( INTNUM )
    (63) matrix_init -> . [ mat_rows ]
    (51) term -> . id_ref
    (52) term -> . number
    (60) mat_func -> . ZEROS
    (61) mat_func -> . ONES
    (62) mat_func -> . EYE
    (76) id_ref -> . ID
    (77) number -> . FLOATNUM
    (78) number -> . INTNUM
    ID              shift and go to state 22
    -               shift and go to state 48
    [               shift and go to state 49
    ZEROS           shift and go to state 54
    ONES            shift and go to state 55
    EYE             shift and go to state 56
    FLOATNUM        shift and go to state 57
    INTNUM          shift and go to state 50

    cond                           shift and go to state 64
    expr                           shift and go to state 65
    ref_vector                     shift and go to state 41
    ref_matrix                     shift and go to state 42
    transpose                      shift and go to state 43
    unary_neg                      shift and go to state 44
    mat_func_call                  shift and go to state 45
    matrix_init                    shift and go to state 46
    term                           shift and go to state 47
    mat_func                       shift and go to state 51
    id_ref                         shift and go to state 52
    number                         shift and go to state 53

state 35
